# dcparse

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: googletest.cmake
cparser/: CMakeLists.txt
cparser/include/: c_ast.h  c_ast_utils.h  c_error.h  c_initializer.h  c_lexer_parser.h  c_logger.h  c_parser.h  c_reporter.h  c_token.h  c_translation_unit_context.h  wasm_codegen.h
cparser/lib/: c_ast.cpp  c_ast_check_constraints.cpp  c_ast_expr.cpp  c_ast_semantic_check.cpp  c_ast_type.cpp  c_ast_utils.cpp  c_error.cpp  c_initializer.cpp  c_lexer_parser.cpp  c_logger.cpp  c_parser.cpp  c_reporter.cpp  c_token.cpp  c_translation_unit_context.cpp  wasm_codegen.cpp
cparser/test/: cast.cpp  clexer.cpp  cparser.cpp  wasm_codegen.cpp
example/: CMakeLists.txt
example/SimpleCalculator/: CMakeLists.txt  README.md
example/SimpleCalculator/include/scalc/: ast.h  context.h  defer.hpp  lexer_parser.h  llvm_visitor.h  parser.h  scalc_error.h  token.h
example/SimpleCalculator/lib/: ast.cpp  context.cpp  lexer_parser.cpp  llvm_visitor.cpp  parser.cpp  scalc_error.cpp  tokenizer.cpp
example/SimpleCalculator/src/: ast.h  main.cpp  parser.cpp  parser.h  tokenizer.cpp
example/SimpleCalculator/test/: simple_calc.cpp
include/: algo.hpp  dcparse.hpp  dcutf8.h
include/lexer/: lexer.hpp  lexer_error.h  lexer_rule.hpp  lexer_rule_cstring_literal.hpp  lexer_rule_regex.hpp  position_info.h  simple_lexer.hpp  text_info.h  token.h
include/parser/: parser.h  parser_error.h
include/regex/: misc.hpp  regex.hpp  regex_automata.hpp  regex_automata_dfa.hpp  regex_automata_dfa_impl.hpp  regex_automata_nfa.hpp  regex_automata_nfa_impl.hpp  regex_automata_node_nfa.hpp  regex_automata_node_nfa_impl.hpp  regex_char.hpp  regex_expr.hpp  regex_expr_node.hpp  regex_internal.hpp  regex_utf8.h
lib/: dcutf8.cpp
lib/lexer/: lexer_error.cpp  position_info.cpp  text_info.cpp  token.cpp
lib/parser/: parser.cpp  parser_error.cpp
lib/regex/: misc.cpp  regex.cpp  regex_char.cpp  regex_internal.cpp  regex_utf8.cpp
scripts/: format_cpp_files.sh
test/: lexer.cpp  parser.cpp  parser_typedef.cpp  regex_dfa.cpp  regex_expr_convert.cpp  regex_nfa.cpp  regex_parser.cpp  regex_range_algo.cpp  regex_utf8.cpp  simple_lexer.cpp  subset_algo.cpp  token.cpp
