cmake_minimum_required(VERSION 3.10)
project(dcparse VERSION 0.1.0)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
add_compile_options("$<$<C_COMPILER_ID:MSVC>:/utf-8>")
add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/utf-8>")
set(CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "-std=c++17")

file(GLOB_RECURSE dcparse_SOURCES CONFIGURE_DEPENDS ./lib/**.cpp)
add_library(dcparse STATIC ${dcparse_SOURCES})
set_property(TARGET dcparse PROPERTY CXX_STANDARD 17)
target_include_directories(dcparse PUBLIC "${CMAKE_CURRENT_LIST_DIR}/include")

add_subdirectory("thirdparty/googletest")
add_subdirectory("example")
add_subdirectory("cparser")

# testing
enable_testing()
include(GoogleTest)
file(GLOB TEST_FILES_CPP "${CMAKE_CURRENT_LIST_DIR}/test/*.cpp")
file(GLOB TEST_FILES_CX  "${CMAKE_CURRENT_LIST_DIR}/test/*.cx")
file(GLOB TEST_FILES     "${CMAKE_CURRENT_LIST_DIR}/test/*.c")
list(APPEND TEST_FILES ${TEST_FILES_CPP} ${TEST_FILES_CX})
foreach (test_file IN LISTS TEST_FILES)
    get_filename_component(filenamewe ${test_file} NAME_WE)
    string(CONCAT execname "test_" ${filenamewe})
    add_executable(${execname} ${test_file})
    set_property(TARGET ${execname} PROPERTY CXX_STANDARD 17)
    target_link_libraries(${execname} gtest_main)
    target_link_libraries(${execname} dcparse)
    gtest_discover_tests(${execname})
endforeach()

