find_package(LLVM REQUIRED CONFIG)
message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")

include_directories(${LLVM_INCLUDE_DIRS})
add_definitions(${LLVM_DEFINITIONS})
llvm_map_components_to_libnames(llvm_libs support core irreader)

file(GLOB_RECURSE scalclib_SOURCES CONFIGURE_DEPENDS ./lib/**.cpp)
add_library(scalclib STATIC ${scalclib_SOURCES})
set_property(TARGET scalclib PROPERTY CXX_STANDARD 17)
target_link_libraries(scalclib PUBLIC dcparse)
target_link_libraries(scalclib PUBLIC ${llvm_libs})
target_include_directories(scalclib PUBLIC "${CMAKE_CURRENT_LIST_DIR}/include")

add_executable(scalc ./src/main.cpp)
set_property(TARGET scalc PROPERTY CXX_STANDARD 17)
target_link_libraries(scalc scalclib)

# testing
enable_testing()
include(GoogleTest)
file(GLOB TEST_FILES_CPP "${CMAKE_CURRENT_LIST_DIR}/test/*.cpp")
file(GLOB TEST_FILES_CX  "${CMAKE_CURRENT_LIST_DIR}/test/*.cx")
file(GLOB TEST_FILES     "${CMAKE_CURRENT_LIST_DIR}/test/*.c")
list(APPEND TEST_FILES ${TEST_FILES_CPP} ${TEST_FILES_CX})
foreach (test_file IN LISTS TEST_FILES)
    get_filename_component(filenamewe ${test_file} NAME_WE)
    string(CONCAT execname "test_" ${filenamewe})
    add_executable(${execname} ${test_file})
    set_property(TARGET ${execname} PROPERTY CXX_STANDARD 17)
    target_link_libraries(${execname} gtest_main)
    target_link_libraries(${execname} scalclib)
    gtest_discover_tests(${execname})
endforeach()
